fixed gtk-doc comments and updated API docs
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14117 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-22  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/libgimpcolor-sections.txt: added gimp_rgb_parse_name().
+
+	* libgimpcolor/tmpl/gimprgb.sgml: regenerated.
+
 2004-07-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
