2004-07-22  Michael Natterer  <mitch@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt: updated after gimpgradient.c chopping.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14119 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt: updated after gimpgradient.c chopping.
+
 2004-07-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/libgimpcolor-sections.txt: added gimp_rgb_parse_name().
