2004-07-22  Sven Neumann  <sven@gimp.org>
	* libgimpcolor/gimprgb-parse.c
	* libgimpcolor/gimprgb.h: improved the CSS color parser code,
	added new function gimp_rgba_parse_css(), added support for HSL
	color values.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14122 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2004-07-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/gimprgb-parse.c
+	* libgimpcolor/gimprgb.h: improved the CSS color parser code,
+	added new function gimp_rgba_parse_css(), added support for HSL
+	color values.
+
+2004-07-22  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/gimprgb-parse.c
 	* libgimpcolor/gimprgb.h: use a signed integer to pass the string
 	length to the new parser functions. The API explicitely asks for
 	-1 to be passed...
