2004-07-23  Sven Neumann  <sven@gimp.org>
	* libgimpcolor/gimprgb-parse.c (gimp_rgba_parse_css): added support
	for the "transparent" color name.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14123 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/gimprgb-parse.c (gimp_rgba_parse_css): added support 
+	for the "transparent" color name.
+
 2004-07-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/gimprgb-parse.c
