2004-07-23  Roman Joost	<roman@bromeco.de>
	* de.po: removed all the fuzzyness


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14124 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-23  Roman Joost	<roman@bromeco.de>
+
+	* de.po: removed all the fuzzyness
+
 2004-07-22  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: updated.
