2004-07-23  Sven Neumann  <sven@gimp.org>
	* app/core/gimpgradient-load.c (gimp_gradient_load_svg): improved
	error message.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14128 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-23  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpgradient-load.c (gimp_gradient_load_svg): improved
+	error message.
+
+2004-07-23  Sven Neumann  <sven@gimp.org>
+
 	* libgimpcolor/test-color-parser.c: added more test samples.
 
 	* libgimpcolor/gimprgb-parse.c: fixed a bug that I found with the
