(svg_parser_end_element): don't crash on empty gradient definitions.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14129 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* app/core/gimpgradient-load.c (gimp_gradient_load_svg): improved
 	error message.
+	(svg_parser_end_element): don't crash on empty gradient definitions.
 
 2004-07-23  Sven Neumann  <sven@gimp.org>
 
