2004-07-23  Sven Neumann  <sven@gimp.org>
	* app/core/gimpgradient-load.c (svg_parser_end_element): fixed
	handling of the last gradient segment and did some code cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14130 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-23  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpgradient-load.c (svg_parser_end_element): fixed
+	handling of the last gradient segment and did some code cleanup.
+
+2004-07-23  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpgradient-load.c (gimp_gradient_load_svg): improved
 	error message.
 	(svg_parser_end_element): don't crash on empty gradient definitions.
