* plug-ins/gimpressionist/: created a header "orientation.h" for the Orientation tab specific declarations.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14132 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: created a header "orientation.h"
+	for the Orientation tab specific declarations.
+	
 2004-07-23  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimppixbuf.c (gimp_pixbuf_from_data): added missing code
