--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-24  Roman Joost <roman@bromeco.de>
+
+	* de.po: Updated few msgstrs and fixed typos
+	
 2004-07-23  Roman Joost	<roman@bromeco.de>
 
 	* de.po: removed all the fuzzyness
