2004-07-25  Raphael Quinet  <quinet@gamers.org>
	* INSTALL: Minor fixes and improvements.  Suggest using a
	different prefix and setting PKG_CONFIG_LIBDIR if old versions of
	GTK+ libs are found and cannot be removed without breaking other
	packages.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14137 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-25  Raphaël Quinet  <quinet@gamers.org>
+
+	* INSTALL: Minor fixes and improvements.  Suggest using a
+	different prefix and setting PKG_CONFIG_LIBDIR if old versions of
+	GTK+ libs are found and cannot be removed without breaking other
+	packages.
+
 2004-07-23  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/: created a header "orientation.h"
