* plug-ins/gimpressionist/: converted checks for initialization of ppm's done by checking the "col" buffer, to macro calls.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14139 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-25  Shlomi Fish  <shlomif@iglu.org.il>
 
+	* plug-ins/gimpressionist/: converted checks for initialization of 
+	ppm's done by checking the "col" buffer, to macro calls.
+
+2004-07-25  Shlomi Fish  <shlomif@iglu.org.il>
+
 	* plug-ins/gimpressionist/: fixed bug #148088: ("Gimpressioinst crashes if 
 	given malicious presets with out of range values, in the radio buttons 
 	group numeric values: "placetype", "orienttype", etc. ").
