--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-25  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/decompose.c: clamp results of LAB decomposition
+	so that out-of-gamut conversions do not overflow and get 
+	badly distorted.  Fixes bug #147603.  Note that it would probably
+	be a good idea to do similar things for other conversion types.
+
 2004-07-25  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/: converted checks for initialization of 
