--- a/tips/eu.po
+++ b/tips/eu.po
@@ -1,3 +1,4 @@
+# translation of eu.po to Basque
 # translation of gimp20-tips.po to Basque
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
@@ -5,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp20-tips\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-06-23 13:58+0200\n"
-"PO-Revision-Date: 2004-04-06 21:31+0200\n"
+"PO-Revision-Date: 2004-07-26 11:46+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +18,6 @@ msgstr ""
 "X-Generator: KBabel 1.0.2\n"
 
 #: tips/gimp-tips.xml.in.h:1
-#, fuzzy
 msgid "<big>Welcome to the GIMP!</big>"
 msgstr "<big>Ongi etorri GIMPera!</big>"
 
@@ -63,7 +63,6 @@ msgstr ""
 "berriro <tt>Maius</tt> tekla sakatuta, geruza guztiak agertzeko."
 
 #: tips/gimp-tips.xml.in.h:7
-#, fuzzy
 msgid ""
 "A floating selection must be anchored to a new layer or to the last active "
 "layer before doing other operations on the image. Click on the \"New Layer\" "
@@ -72,8 +71,8 @@ msgid ""
 msgstr ""
 "Hautapen mugikorra geruza berri batean edo azken geruza aktiboan ainguratu "
 "behar da, irudian beste eragiketarik egin baino lehen. Sakatu \"Geruza berria"
-"\" edo \"Ainguratu geruza\" botoietan \"Geruzak, kanalak eta bide-izenak”\" "
-"elkarrizketa-koadroan, edo erabili menuak gauza bera egiteko."
+"\" edo \"Ainguratu geruza\" botoietan \"Geruzak\" elkarrizketa-koadroan, "
+"edo erabili menuak gauza bera egiteko."
 
 #: tips/gimp-tips.xml.in.h:8
 msgid ""
@@ -87,7 +86,6 @@ msgstr ""
 "irtendakoan gordetzen da."
 
 #: tips/gimp-tips.xml.in.h:9
-#, fuzzy
 msgid ""
 "Click and drag on a ruler to place a guide on an image. All dragged "
 "selections will snap to the guides. You can remove guides by dragging them "
@@ -139,14 +137,13 @@ msgstr ""
 "osoan lan egitea nahi baduzu."
 
 #: tips/gimp-tips.xml.in.h:14
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
 "&gt;Mode-&gt;RGB), add an alpha-channel (Layer-&gt;Transparency-&gt;Add "
 "Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
-"fektu guztiak ez dira berdin aplikatzen irudi-mota guztietan. Hori "
+"Efektu guztiak ez dira berdin aplikatzen irudi-mota guztietan. Hori "
 "adierazteko, menu-sarrera lausotuta agertuko da. Agian irudiaren modua RGBra "
 "aldatu behar duzu (Irudia-&gt;Modua-&gt;RGB), alfa kanal bat gehitu (Geruzak-"
 "&gt;Gehitu alfa kanala) edo irudia berdindu (Geruzak-&gt;Berdindu irudia)."
@@ -162,9 +159,8 @@ msgstr ""
 "<tt>Ctrl</tt> erabiltzen bada, unekotik kendu egiten da."
 
 #: tips/gimp-tips.xml.in.h:16
-msgid ""
-"The GIMP can undo most changes to the image, so feel free to experiment."
-msgstr ""
+msgid "The GIMP can undo most changes to the image, so feel free to experiment."
+msgstr "GIMP-ek irudiaren aldaketa gehienak desegin ditzakenez, jolastu irudiekin."
 
 #: tips/gimp-tips.xml.in.h:17
 msgid ""
@@ -211,7 +207,6 @@ msgstr ""
 "hautatu \"Gehitu alfa kanala\"."
 
 #: tips/gimp-tips.xml.in.h:21
-#, fuzzy
 msgid ""
 "To create a circle-shaped selection, hold <tt>Shift</tt> while doing an "
 "ellipse select. To place a circle precisely, drag horizontal and vertical "
@@ -219,7 +214,7 @@ msgid ""
 "intersection of the guides, and the resulting selection will just touch the "
 "guides."
 msgstr ""
-"irkulu perfektu bat egiteko, eduki Maius sakatuta hautapen eliptikoa egiten "
+"Zirkulu perfektu bat egiteko, eduki <tt>Maius</tt> sakatuta hautapen eliptikoa egiten "
 "duzun bitartean. Zirkulu bat behar bezala kokatzeko, arrastatu gida "
 "horizontalen eta bertikalen tangentea hautatu nahi duzun zirkulura, jarri "
 "kurtsorea giden ebakiduran eta lortzen den hautapenak gidak ukituko ditu."
@@ -232,7 +227,7 @@ msgid ""
 "constrained to 15 degree angles."
 msgstr ""
 "Marrazteko tresna bat erabiltzean (pintzela, aerografoa edo arkatza), sakatu "
-"Maius tekla eta lerro zuzen bat marraztuko da azken marrazketa-puntutik "
+"<tt>Maius</tt> tekla eta lerro zuzen bat marraztuko da azken marrazketa-puntutik "
 "kurtsorearen uneko kokalekura arte. <tt>Ktrl</tt> ere sakatzen baduzu, "
 "lerroa 15 gradu biratuko da."
 
@@ -250,12 +245,14 @@ msgstr ""
 "JPEG, PNG, GIF, ..."
 
 #: tips/gimp-tips.xml.in.h:24
-#, fuzzy
 msgid ""
 "You can adjust or move a selection by using <tt>Alt</tt>-drag. If this makes "
 "the window move, your window manager uses the <tt>Alt</tt> key already. Try "
 "pressing <tt>Shift</tt> at the same time."
-msgstr "Hautapen bat doitzeko eta ordezteko, erabili <tt>Alt</tt>-arrastatu. "
+msgstr ""
+"Hautapen bat doitzeko eta ordezteko, erabili <tt>Alt</tt>-arrastatu. Honek leihoa mugitzen badu, "
+"leiho kudeatzaileak <tt>Alt</tt> erabiltzen duela adierazten du. Saia zaitez aldi "
+"berean <tt>Mayus</tt> tekla sakatuz."
 
 #: tips/gimp-tips.xml.in.h:25
 msgid ""
@@ -323,14 +320,13 @@ msgstr ""
 "klik eginda."
 
 #: tips/gimp-tips.xml.in.h:32
-#, fuzzy
 msgid ""
 "You can press or release the <tt>Shift</tt> and <tt>Ctrl</tt> keys while you "
 "are making a selection in order to constrain it to a square or a circle, or "
 "to have it centered on its starting point."
 msgstr ""
 "Hautapen bat egiten ari zarenean <tt>Maius</tt> eta <tt>Ktrl</tt> teklak "
-"sakatutzen edo askatzen badituzu, lauki edo zirkulu perfektu bihurtuko da "
+"sakatzen edo askatzen badituzu, lauki edo zirkulu perfektu bihurtuko da "
 "edo hasierako puntuan zentratuko da."
 
 #: tips/gimp-tips.xml.in.h:33
@@ -381,3 +377,4 @@ msgstr ""
 #~ "Ia irudi-eragiketa gehienak saguaren eskuineko botoiaz irudian klik "
 #~ "eginda burutzen dira. Eta ez kezkatu, akats gehienak desegin daitezke "
 #~ "eta..."
+
