--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/main.c (main): use #ifdef GIMP_UNSTABLE instead of looking
+	at GIMP_MINOR_VERSION.
+
+	* app/app_procs.c: don't #include "tools/gimp-tools.h".
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/bmp/bmp.h
