2004-07-26  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpeditselectiontool.c: don't freeze()/thaw() the
	image's undo to prevent live-movement from ending up on the undo
	stack. Instead, just stop pushing undo steps after the initial
	movement. Simplifies edit_select's undo code quite a bit and fixes
	bug #148458.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14148 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpeditselectiontool.c: don't freeze()/thaw() the
+	image's undo to prevent live-movement from ending up on the undo
+	stack. Instead, just stop pushing undo steps after the initial
+	movement. Simplifies edit_select's undo code quite a bit and fixes
+	bug #148458.
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpcolorscales.c (gimp_color_scales_hex_events):
