--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/core-types.h: removed unused typedef
+	GimpDataObjectLoaderFunc.
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/gimprgb-parse.c
