--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/gimprgb.[ch]: register GimpRGB as a boxed type.
+
+	* libgimpcolor/gimpadaptivesupersample.c
+	* libgimpcolor/gimpcolorspace.c
+	* libgimpcolor/gimprgb-parse.c
+	* libgimp/gimp.h: include <glib-object.h> instead of <glib.h>.
+
 2004-07-26  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/: placed all the orientation map-related
