2004-07-26  Sven Neumann  <sven@gimp.org>
	* libgimpcolor/gimpcolor.def
	* libgimpwidgets/gimpwidgets.def: added new symbols.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14156 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
+	* libgimpcolor/gimpcolor.def
+	* libgimpwidgets/gimpwidgets.def: added new symbols.
+
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
 	* libgimpcolor/gimprgb.[ch]: register GimpRGB as a boxed type.
 
 	* libgimpcolor/gimpadaptivesupersample.c
