--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.def
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimpcellrenderercolor.[ch]: added a GimpRGB cell
+	renderer.
+
+	* libgimpwidgets/gimpcolorarea.[ch]: exported the function that
+	renders the color to a buffer for internal use in libgimpwidgets.
+
+	* libgimpwidgets/gimpcolorhexentry.c: use the new cell renderer
+	for the completion popup.
+
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
 	* libgimpcolor/gimpcolor.def
 	* libgimpwidgets/gimpwidgets.def: added new symbols.
 
